<resources>
    <string name="app_name">Fix Note</string>
    <string name="email">E-mail</string>
    <string name="Enviar">Enviar</string>
    <string name="datos_cliente">Datos del Cliente</string>
    <string name="nombre">Nombre(s)</string>
    <string name="apellido1">Primer apellido</string>
    <string name="apellido2">Segundo apellido</string>
    <string name="cel">Télefono Celular</string>
    <string name="datos_equipo">Datos de equipo</string>
    <string name="modelo">Modelo</string>
    <string name="id_equipo">IMEI/#Serie</string>
    <string name="info">Información de reparación</string>
    <string name="costo">Costo de reparación</string>
    <string name="garantia">Garantía</string>
    <string name="observaciones">Observaciones</string>
    <string name="config">Configuración</string>
    <string name="ajustes">Ajustes</string>
    <string name="contacto">Contacto</string>
    <string name="guardar">Guardar</string>
    <string name="asunto">Asunto</string>
    <string name="email_empresa">Email (Empresa)</string>
    <string name="asunto_opcional">Asunto (opcional)</string>
    <string name="title_activity_lista_activity">lista_activity</string>

</resources>
